# qb001_ec_stream

./: .env.example  .gitignore  AGENTS.md  README.md  build.sh  conftest.py  pyproject.toml  requirements.txt  verify_auth.py
config/: settings.json
docs/: client_consultation_items.md  e2e_testing_guide.md  migration_plan_smart_club.md  requirements_definition.md  requirements_definition_final.md  system_options_comparison.md  system_specification.md  user_manual.md
src/: config.py  main.py
src/models/: __init__.py  item.py
src/services/: __init__.py  auction_service.py  browser_service.py  gmail_service.py  shipping_service.py
src/utils/: __init__.py  file_manager.py  logger.py  text_parser.py
tests/: test_config.py  test_file_manager.py  test_models.py  test_shipping_service.py  test_text_parser.py
tests/fixtures/: sample_email.txt  shipped_ids.json
tests/integration/: test_browser_launch.py  test_gmail_auth.py
tests/verification/: verify_login_session.py
